# AzureMCPServer

./: README.md  pyproject.toml
demo/: demo.md
examples/: claude_desktop_config.json
src/azure_mcp/: __init__.py  auth.py  config.py  server.py
src/azure_mcp/tools/: __init__.py  app_insights.py  app_service.py  resource_groups.py  resources.py  service_bus.py
